[package]
name = "tiny_one"
version = "0.9.0"
authors = ["puiuiui@gmail.com",
           "uiuiH <uiui@jiuy.org>"]
description = "Low level HTTP server "
documentation = "https://tiny-one.github.io/tiny-one/index.html"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/virtuehive/tiny-one"

[features]
default = []
ssl = ["openssl"]

[dependencies]
ascii = "1.0"
chunked_transfer = "1"
openssl = { version = "0.10", optional = true }
url = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
log = "0.4"

[dev-dependencies]
rustc-serialize = "0.3"
sha1 = "0.6.0"
fdlimit = "0.1"
